# VaultBack

./: .env  ACTIVITY.md  README.md  go.mod  main.go
.github/: pull_request_template.md
.github/workflows/: ci.yml
api/: .env.example  .gitignore  Dockerfile  cookies.txt  go.mod  go.sum  init.sql  main.go
api/src/core/cloudinary/: Cloudinary.go
api/src/core/config/: Config.go  LoadConfig.go  PoolConnection.go
api/src/core/eventbus/: Consumer.go  Publisher.go
api/src/core/httpresponse/: JSONResponse.go
api/src/core/middleware/: CORS.go
api/src/core/moderation/: Client.go
api/src/core/security/: Argon2.go  JWT.go  JWT_Middleware.go  Utils.go
gateway/: Dockerfile  docker-entrypoint.sh  nginx.conf
payment/: .env.example  Dockerfile  go.mod  go.sum  init.sql  main.go
payment/src/core/config/: Config.go  LoadConfig.go  Migration.go
payment/src/core/eventbus/: Publisher.go
realtime/: .env.example  Dockerfile  package-lock.json  package.json
realtime/src/: index.ts
vault-blockchain/: .env.example  Dockerfile  package-lock.json  package.json
vault-blockchain/contracts/asset_certificate/: Cargo.toml
vault-blockchain/contracts/asset_certificate/src/: lib.rs
vault-blockchain/src/: index.js
vault-blockchain/src/consumers/: rabbitmq_consumer.js
vault-blockchain/src/db/: supabase_client.js
vault-blockchain/src/publishers/: rabbitmq_publisher.js
vault-blockchain/src/routes/: certify_routes.js  verify_routes.js
vault-blockchain/src/sse/: certification_sse.js
vault-blockchain/src/vara/: gear_api.js  smart_contract.js
(+367 files in other folders)
